# RepoWithMultipleLanguages

./: .gitignore  Dockerfile  README.md  package-lock.json
dotnet/: Program.cs  SbomTest.csproj
elixir/: mix.exs
elixir/lib/: sbom_test.ex
generators/: gen_npm.py  gen_pom.py  gen_py_go_ruby.py
go/: go.mod  go.sum  main.go
haskell/: sbom-test.cabal
haskell/src/: Main.hs
ios-cocoapods/: .gitignore  Podfile  README.md
ios-cocoapods/CocoaPodsExample/: AppDelegate.swift  LaunchScreen.storyboard  SceneDelegate.swift  ViewController.swift
ios-cocoapods/CocoaPodsExampleTests/: CocoaPodsExampleTests.swift
java/: pom.xml
java/src/main/java/com/example/sbomtest/: SbomTestApplication.java
javascript/: index.js  package-lock.json  package.json
php/: composer.json  index.php
python/: app.py  requirements.txt
r/: DESCRIPTION  app.R
ruby/: Gemfile  app.rb
rust/: Cargo.toml
rust/src/: main.rs
swift/: Package.swift
swift/Sources/SBOMTestSwift/: main.swift
