[package]
name = "sbom-test-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11.18", features = ["json"] }
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["postgres"] }
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.24"

[dev-dependencies]
mockall = "0.11.4"
tokio-test = "0.4.2"
